force-app/main/default/objects/KPI__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional Information given</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>