force-app/main/default/objects/KPI__c/fields/estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>estimated_Revenue__c</fullName>
    <description>estimated revenue in a certain time period</description>
    <label>estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>