force-app/main/default/objects/KPI__c/fields/ForecastingRelevant__c.field-meta.xml
<CustomField>
    <fullName>ForecastingRelevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate the calculation of forecasting</description>
    <label>Forecasting relevant</label>
    <type>Checkbox</type>
</CustomField>