force-app/main/default/objects/KPI__c/fields/KPIDueDate__c.field-meta.xml
<CustomField>
    <fullName>KPIDueDate__c</fullName>
    <description>Due date for the KPI, also the end date for forecasting calculation</description>
    <label>KPI due date</label>
    <type>Date</type>
</CustomField>