force-app/main/default/objects/KPI__c/fields/Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls__c</fullName>
    <description>Number of Calls made by Sales Rep in a certain time</description>
    <inlineHelpText>Number of Calls made by Sales Rep in a certain time</inlineHelpText>
    <label>Number of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>