force-app/main/default/objects/KPI__c/fields/relatedAccount__c.field-meta.xml
<CustomField>
    <fullName>relatedAccount__c</fullName>
    <description>Master Detail relation between Account and KPIs</description>
    <label>related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KPIs</relationshipLabel>
    <relationshipName>KPIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>