force-app/main/default/objects/KPI__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracking field for the respective Sales Rep</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>